git commit -m "clean code, show record use "