@@ -5,13 +5,11 @@ import com.example.starwars.infrastructure.entity.Film;
 import com.example.starwars.model.GetPersonInfo200Response;
 import com.example.starwars.model.GetPersonInfo200ResponseFilmsInner;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Component
@@ -28,9 +26,9 @@ public interface InformationToGetPersonInfoMapper {
     default List<GetPersonInfo200ResponseFilmsInner> mapFilms(List<Film> films) {
         return films.stream()
                 .map(film -> new GetPersonInfo200ResponseFilmsInner()
-                        .name(film.getTitle()) // Ensure getName() matches Film property
-                        .releaseDate(parseReleaseDate(film.getRelease_date()))) // Convert date string to LocalDate
-                .collect(Collectors.toList());
+                        .name(film.title()) // Ensure getName() matches Film property
+                        .releaseDate(parseReleaseDate(film.releaseDate()))) // Convert date string to LocalDate
+                .toList();
     }
 
     // Helper method to parse the release date
